Bug 400431 - Discover complains about Appstream possibly not being properly set up.
Summary: Discover complains about Appstream possibly not being properly set up.
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.14.2
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
: 400646 400754 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-10-28 20:10 UTC by Eridani Rodríguez
Modified: 2018-11-21 02:50 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
initial debug output from "appstreamcli status --verbose" (104.23 KB, text/x-log)
2018-10-28 20:10 UTC, Eridani Rodríguez
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eridani Rodríguez 2018-10-28 20:10:04 UTC
Created attachment 115952 [details]
initial debug output from "appstreamcli status --verbose"

SUMMARY
Upon launching Discover, a notification is shown with the following text:

"Please make sure that Appstream is properly set up in your system"
(Free translation)


SOFTWARE VERSIONS
KDE Plasma Version: 5.14.2
KDE Frameworks Version: 5.51.0
Qt Version: 5.11.2
OS: KDE neon 5.14
Kernel: 4.15.0-38-generic
AppStream version: 0.12.2


ADDITIONAL INFORMATION
 - When updating or upgrading packages from apt or Synaptic, no error is found.
 - Attached file with initial debug output from "appstreamcli status --verbose"
Comment 1 Patrick Silva 2018-11-04 10:51:50 UTC
*** Bug 400646 has been marked as a duplicate of this bug. ***
Comment 2 Aleix Pol 2018-11-06 17:10:32 UTC
*** Bug 400754 has been marked as a duplicate of this bug. ***
Comment 3 Aleix Pol 2018-11-21 02:49:18 UTC
Git commit 3f9d17c940a1a17b4a3d73d91c5a9cdc4d9d6cd9 by Aleix Pol.
Committed on 21/11/2018 at 02:47.
Pushed by apol into branch 'master'.

Don't generate appstream data for files that lack a description

Summary:
They end up being broken appstream files and it fails on the users' faces.
Have it as a warning to the developers instead.

Reviewers: #plasma, #frameworks, ngraham

Reviewed By: ngraham

Subscribers: ngraham, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D16867

M  +5    -0    src/kpackagetool/kpackagetool.cpp

https://commits.kde.org/kpackage/3f9d17c940a1a17b4a3d73d91c5a9cdc4d9d6cd9
Comment 4 Aleix Pol 2018-11-21 02:50:03 UTC
Git commit bc32ed4ef08d858edadcfd9eb87d550dfc2704ac by Aleix Pol.
Committed on 21/11/2018 at 02:48.
Pushed by apol into branch 'master'.

Include a comment to the desktop file

Summary:
Otherwise the appstream file won't have a summary and appstream complains.

Reviewers: #marble, kossebau, sanjibanb

Reviewed By: sanjibanb

Subscribers: marble-devel, kde-edu

Tags: #marble, #kde_edu

Differential Revision: https://phabricator.kde.org/D16866

M  +1    -0    src/plasma/wallpapers/worldmap/metadata.desktop

https://commits.kde.org/marble/bc32ed4ef08d858edadcfd9eb87d550dfc2704ac