Don't generate appstream data for files that lack a description

Summary:
They end up being broken appstream files and it fails on the users' faces.
Have it as a warning to the developers instead.

BUG: 400431

Reviewers: #plasma, #frameworks, ngraham

Reviewed By: ngraham

Subscribers: ngraham, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D16867